--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,3 +48,29 @@
   background-color: #3f51b5;
   color: white;
 }
+
+.content {
+  padding: 1em;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.grid-list-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background: #fff;
+  text-decoration: none;
+  padding: 4px;
+  width: calc(100% - 10px);
+
+
+
+  mat-icon:first-child {
+    text-align: center;
+    width: 40px;
+  }
+}
