--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span>News Headlines</span>
+
   <span class="example-spacer"></span>
   <button mat-button [matMenuTriggerFor]="appMenu">
     <mat-icon>settings</mat-icon>
@@ -27,32 +28,41 @@
       </mat-list-item>
     </mat-list>
   </mat-sidenav>
-  <mat-card class="example-card" *ngFor="let article of mArticles">
-    <mat-card-header>
-      <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}"
-        class="example-header-image"></div>
-      <mat-card-title class="title">{{article.title}}</mat-card-title>
-      <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
-    <mat-card-content>
-      <p>
-        {{article.description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions class="action-buttons">
-      <button mat-button color="primary">
-        <mat-icon>thumb_up_alt</mat-icon> 12 Likes
-      </button>
-      <button mat-button color="primary">
-        <mat-icon>comment</mat-icon> Comments
-      </button>
-      <button mat-button color="primary">
-        <mat-icon>share</mat-icon> Share
-      </button>
-      <a mat-button color="primary" href={{article.url}} target="_blank">
-        <mat-icon>visibility</mat-icon> More
-      </a>
-    </mat-card-actions>
-  </mat-card>
+  <mat-slide-toggle [checked]="responsive" (toggleChange)="responsive = !responsive">
+    Responsive
+  </mat-slide-toggle>
+  <mat-grid-list [responsive]="responsive" (responsiveColsChange)="cols = $event" rowHeight="500" gutterSize="6px">
+    <mat-grid-tile *ngFor="let article of mArticles">
+      <a class="grid-list-item mat-body mat-elevation-z2" mat-ripple>
+
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}"
+              class="example-header-image"></div>
+            <mat-card-title class="title">{{article.title}}</mat-card-title>
+            <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
+          <mat-card-content>
+            <p>
+              {{article.description}}
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="action-buttons">
+            <button mat-button color="primary">
+              <mat-icon>thumb_up_alt</mat-icon> 12 Likes
+            </button>
+            <button mat-button color="primary">
+              <mat-icon>comment</mat-icon> Comments
+            </button>
+            <button mat-button color="primary">
+              <mat-icon>share</mat-icon> Share
+            </button>
+            <a mat-button color="primary" href={{article.url}} target="_blank">
+              <mat-icon>visibility</mat-icon> More
+            </a>
+          </mat-card-actions>
+        </mat-card>
+      </a></mat-grid-tile>
+  </mat-grid-list>
 </mat-sidenav-container>
